Add a user me endpoint, add cors and update swagger
