# internal/dto/user.go
@@ -20,3 +20,9 @@ type LoginUserRequest struct {
 type LoginUserResponse struct {
 	Token string `json:"token"`
 } //@name LoginUserResponse
+
+type UserResponse struct {
+	ID       string `json:"id"`
+	Username string `json:"username"`
+	Role     string `json:"role"`
+} //@name UserResponse //@name LoginUserResponse
